--- a/src/car_move/CMakeLists.txt
+++ b/src/car_move/CMakeLists.txt
@@ -128,6 +128,7 @@ add_executable(basic_move basic_move.cpp)
 add_executable(test_move test_move.cpp)
 add_executable(houghTest houghTest.cpp)
 add_executable(zbarTest zbarTest.cpp)
+add_executable(barcode_detect barcode_detect.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -147,6 +148,7 @@ target_link_libraries(houghTest
 	opencv_nonfree
 )
 target_link_libraries(zbarTest ${catkin_LIBRARIES})
+target_link_libraries(barcode_detect ${catkin_LIBRARIES})
 
 #############
 ## Install ##
